# tfg-scratchpad

./: .gitignore  README.md  pyproject.toml
notebooks/: 001-data-loading.ipynb  002-cache-tests.ipynb
